--- a/Goofy/mainapp/templates/mainapp/base.html
+++ b/Goofy/mainapp/templates/mainapp/base.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="{{ csrf_token }}">
     <title>{% block title %} {% endblock title %}</title>
-    <link rel="icon" href="{% static 'mainapp/profileassets/dog.svg' %}" type="image/svg+xml">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Faster+One&family=Inter:wght@100..900&display=swap"
@@ -29,15 +28,19 @@
         <div id="leftnav"
             class="hidden sm:block w-[50%] max-w-[240px] sm:w-[72px] h-full fixed z-20  border-r-[2px] border-white">
             <div id="lchild" class="bg-transparent">
-                <div id="hamopen" class="flex  h-10 w-10 justify-center rounded-2xl pt-8  ml-3">
+                <div id="hamopen" class="flex h-12 justify-between items-center rounded-2xl pt-8  ml-5">
                     <button class="sm:hidden" onclick="lnav()">
                         <img src="{% static 'mainapp/homepageassets/cross.svg' %}" alt="">
                     </button>
                     <button id="ham2" class="hidden sm:block" onclick="lnav()">
+                        
                         <img src="{% static 'mainapp/homepageassets/hamburger1.svg' %}" alt="">
                     </button>
+                    <div id="goofy-ham" class="text-white montserrat pt-1 hidden mr-16 text-2xl">
+                        GOOFY
+                    </div>
                 </div>
-                <div class="flex-col pt-8 space-y-5 poppins-regular text-white">
+                <div class="flex-col mt-8 space-y-5 poppins-regular text-white">
 
 
                     <div id="hel"
@@ -392,6 +395,7 @@
     <script>
         let alltracks = [];
         let curr_song_index = 0;
+        let curr_playlist_index;
         let expanded = false;
         let islike = false;
         let isplaying = false;
@@ -402,6 +406,7 @@
         const playerprogress = document.getElementById("playerprogress");
         const song = document.getElementById("song");
         const controllingicon = document.getElementById("playpause");
+        let isplaylist = false;
 
         // song.addEventListener("loadeddata", () => {
         //     playerprogress.max = Math.floor(song.duration);
@@ -460,7 +465,7 @@
             if (alltracks.length - 1 == curr_song_index) {
                 return 0;
             }
-            else if (alltracks.length - 1 > curr_song_index) {
+            else if (alltracks.length - 1 > curr_song_index && !isplaylist) {
                 const song_ask = related_songs[curr_song_index + 3];
                 $.ajax({
                     type: "GET",
@@ -518,7 +523,7 @@
                 volume_slider.value = "0";
                 volumeManage();
             }
-            song.volume = parseInt(volume_slider.value / 100);
+
         }
 
         function lyricsbtn() {
@@ -588,6 +593,7 @@
             }
             else {
                 volbtn.src = "{% static 'mainapp/player/volmax.svg' %}";
+
             }
             song.volume = slidervalue / 100;
         }
@@ -684,6 +690,48 @@
         });
     </script>
     <script>
+        function getBlob(song_dict,ispl=false) {
+
+            if (ispl) {
+                $.get({
+                    url: '{% url "getmusicblob" %}',
+                    type: "GET",
+                    data: { 'query': song_dict.songId },
+                    xhrFields: {
+                        responseType: 'blob' // This is crucial to handle the file as a blob
+                    },
+    
+                    success: function (response2) {
+    
+                        var blob = new Blob([response2], { type: 'audio/m4a' });
+                        var url = URL.createObjectURL(blob);
+ 
+                        alltracks.push({ "songId": song_dict.songId, "songname": song_dict.title, "author": song_dict.author, "thumbnail": song_dict.thumbnail, "blob": url });
+                    }
+                });
+            }
+            else{
+
+                $.get({
+                    url: '{% url "getmusicblob" %}',
+                    type: "GET",
+                    data: { 'query': song_dict.videoId },
+                    xhrFields: {
+                        responseType: 'blob' // This is crucial to handle the file as a blob
+                    },
+    
+                    success: function (response2) {
+    
+                        var blob = new Blob([response2], { type: 'audio/m4a' });
+                        var url = URL.createObjectURL(blob);
+    
+                        alltracks.push({ "songId": song_dict.videoId, "songname": song_dict.title, "author": song_dict.author, "thumbnail": song_dict.thumbnail, "blob": url });
+                    }
+                });
+            }
+        }
+    </script>
+    <script>
         let related_songs;
         function loadSong(videoId, songname, author, thumbnail) {
 
@@ -746,39 +794,68 @@
                     // }
 
                     playpause();
-                    $.ajax({
-                        type: "GET",
-                        url: '{% url "getRelated" %}',
-                        data: { 'query': videoId },
-                        success: function (response) {
+                    if (!isplaylist) {
 
-                            related_songs = response.related;
+                        $.ajax({
+                            type: "GET",
+                            url: '{% url "getRelated" %}',
+                            data: { 'query': videoId },
+                            success: function (response) {
 
-                            related_songs.slice(0, 3).forEach(s => {
-                                $.get({
-                                    url: '{% url "getmusicblob" %}',
-                                    type: "GET",
-                                    data: { 'query': s.videoId },
-                                    xhrFields: {
-                                        responseType: 'blob' // This is crucial to handle the file as a blob
-                                    },
+                                related_songs = response.related;
 
-                                    success: function (response2) {
+                                related_songs.slice(0, 3).forEach(s => {
 
-                                        var blob = new Blob([response2], { type: 'audio/m4a' });
-                                        var url = URL.createObjectURL(blob);
-
-                                        alltracks.push({ "songId": s.videoId, "songname": s.title, "author": s.author, "thumbnail": s.thumbnail, "blob": url });
-                                    }
+                                    getBlob(s);
                                 });
-                            });
-                            if (islyrics) {
-                                placeUpNext();
+                                if (islyrics) {
+                                    placeUpNext();
+                                }
+
                             }
 
-                        }
+                        });
+                    }
+                    else {
+                        
 
-                    });
+                        playlist_songs.forEach((i,j)=>{
+              
+                            if (i.songId==videoId) {
+
+                                curr_playlist_index=j;
+                            }
+                        });
+
+                        let playlist_song_ids = [];
+                        upnext_playlist = playlist_songs.slice(curr_playlist_index + 1, curr_playlist_index + 4)
+                        upnext_playlist.forEach(song => {
+                            playlist_song_ids.push(song.songId);
+                        })
+                        $.ajax({
+                            type: "GET",
+                            url: '{% url "getSong" %}',
+                            data: { 'query': playlist_song_ids },
+                            xhrFields: {
+                                responseType: 'blob'
+                            },
+                            success: function (response) {
+                     
+                                var blob = new Blob([response], { type: 'audio/m4a' });
+                                var url = URL.createObjectURL(blob);
+                                alltracks.push({ "songId": upnext_playlist[0].songId, "songname": upnext_playlist[0].title, "author": upnext_playlist[0].author, "thumbnail": upnext_playlist[0].thumbnail, "blob": url })
+                                upnext_playlist.slice(1).forEach(song=>{
+
+                                    getBlob(song,ispl=true);
+                                });
+                                if (islyrics) {
+                                    
+                                    placeUpNext();
+                                }
+                            }
+                        });
+
+                    }
 
                 }
             })
@@ -792,7 +869,7 @@
             $("#lchild").addClass("gradnav");
             $("#allelements").empty();
             $("#allelements").append(
-                `<div class="text-white  flex w-[98%] text-[30px] mt-20  space-x-2 ">
+                `<div class="text-white  flex w-[98%] text-[30px] mt-12  space-x-2 ">
                     <div class="montserrat">Results for </div>
                     <div class="lora font-bold">${title}</div>
                 </div>
@@ -804,9 +881,9 @@
         function placeResultData(item) {
             $("#allelements").append(`
     <div class="flex justify-between poppins-regular">
-        <button class="flex space-x-5" songId="${item.videoId}" songname="${item.title}" songauthor="${item.author}" thumbnail="${item.thumbnail}" onclick="loadSong(this.getAttribute('songId'), this.getAttribute('songname'), this.getAttribute('songauthor'), this.getAttribute('thumbnail'))">
+        <button class="flex space-x-5" songId="${item.videoId}" songname="${item.title}" songauthor="${item.author}" thumbnail="${item.thumbnail}" onclick="loadSong('${item.videoId}', '${item.title}', '${item.author}', '${item.thumbnail}')">
             <div class="border">
-                <img src="${item.thumbnail}" alt="">
+                <img class="h-[60px] w-[60px]" src="${item.thumbnail}" alt="">
             </div>
             <div class="text-white">
                 <div class="h-[30px] font-bold raleway">
@@ -848,10 +925,9 @@
 
                     success: function (response) {
                         $('html, body').css(
-                        'background-color', 'transparent'
+                            'background-color', 'transparent'
                         );
-                        $('body').addClass("bg-gradient-to-r from-[#0f0f0f] from-5% via-[#1a1a1a] via-20% via-[#3e6b8f] via-50% to-[#002b5c] to-90%"
-);
+                        $('body').addClass("bg-gradient-to-r from-[#0f0f0f] from-5% via-[#1a1a1a] via-20% via-[#3e6b8f] via-50% to-[#002b5c] to-90%");
                         makeResultHeading(title = e.target.value);
                         closesearch();
 
@@ -922,8 +998,7 @@
                     $('html, body').css(
                         'background-color', 'transparent'
                     );
-                    $('body').addClass("bg-gradient-to-r from-[#0f0f0f] from-5% via-[#1a1a1a] via-20% via-[#3e6b8f] via-50% to-[#002b5c] to-90%"
-);
+                    $('body').addClass("bg-gradient-to-r from-[#0f0f0f] from-5% via-[#1a1a1a] via-20% via-[#3e6b8f] via-50% to-[#002b5c] to-90%");
                     $("#allelements1").remove();
                     $("#lchild").remove("bg-transparent");
                     $("#lchild").addClass("gradnav");
@@ -959,7 +1034,7 @@
     <script>
         function getAL(albumId, altitle) {
 
-            
+
 
             $.ajax({
                 url: '{% url "getAlbum" %}',
@@ -968,14 +1043,13 @@
                     $('html, body').css(
                         'background-color', 'transparent'
                     );
-                    $('body').addClass("bg-gradient-to-r from-[#0f0f0f] from-5% via-[#1a1a1a] via-20% via-[#3e6b8f] via-50% to-[#002b5c] to-90%"
-);
+                    $('body').addClass("bg-gradient-to-r from-[#0f0f0f] from-5% via-[#1a1a1a] via-20% via-[#3e6b8f] via-50% to-[#002b5c] to-90%");
                     $("#allelements1").remove();
                     $("#lchild").remove("bg-transparent");
                     $("#lchild").addClass("gradnav");
                     $("#allelements").empty();
                     $("#allelements").append(
-                        `<div class="text-white flex space-x-3  w-[98%] text-[30px] mt-12">
+                        `<div class="text-white flex space-x-3  w-[98%] text-[30px] mt-20  mb-2">
                             <div class="montserrat">
                                 Results for 
                             </div>
@@ -1007,7 +1081,7 @@
             const heads = { 1: "Singles", 2: "Songs", 3: "Albums" }
             Object.entries(heads).forEach(([k, v]) => {
 
-                if(k==2){
+                if (k == 2) {
                     $("#allelements").append(
                         `
                                 <div class="text-white flex w-[98%] text-[30px] justify-between pt-4">
@@ -1020,8 +1094,7 @@
                                     `
                     );
                 }
-                else
-                {
+                else {
 
                     $("#allelements").append(
                         `
@@ -1055,8 +1128,7 @@
                     $('html, body').css(
                         'background-color', 'transparent'
                     );
-                    $('body').addClass("bg-gradient-to-r from-[#0f0f0f] from-5% via-[#1a1a1a] via-20% via-[#3e6b8f] via-50% to-[#002b5c] to-90%"
-);
+                    $('body').addClass("bg-gradient-to-r from-[#0f0f0f] from-5% via-[#1a1a1a] via-20% via-[#3e6b8f] via-50% to-[#002b5c] to-90%");
                     $("#grad-control").removeClass("gradnav1");
                     $("#allelements1").remove();
                     $("#lchild").remove("bg-transparent");
@@ -1238,7 +1310,7 @@
 
         function fetchPlaylists(callback) {
             $.ajax({
-                url: '{% url "getPlaylists" %}',  // Replace with your actual URL
+                url: '{% url "getPlaylists" %}',
                 type: 'GET',
                 success: function (data) {
                     callback(data.playlists);
@@ -1251,16 +1323,18 @@
 
         function addToPlaylist(playlist_id, songId) {
             $.ajax({
-                url: '{% url "updatePlaylist" %}',  // Replace with your actual URL
+                url: '{% url "updatePlaylist" %}',
                 type: 'POST',
 
                 data: {
                     "song_id": songId,
                     "playlist_id": playlist_id,
+
                     'csrfmiddlewaretoken': getCSRFToken(),
                 },
                 success: function (response) {
                     showNotification('Song added to playlist successfully!');
+
                 },
                 error: function (error) {
                     showNotification('An error occurred while adding the song.', 'error');
@@ -1436,7 +1510,7 @@
         function restoreOriginalElements() {
             if (originalElements) {
                 $("#allelements").empty().append(originalElements);
-              
+
                 if ($("#allelements1").length) {
 
                     $("#allelements1").empty().append(topelements);
@@ -1453,6 +1527,10 @@
     </script>
     <script>
         function placeUpNext() {
+            let upnextarr=related_songs;
+            if (isplaylist) {
+                upnextarr=playlist_songs.slice(curr_playlist_index+1);
+            }
             $("#upnext-container").empty();
             $("#upnext-container").append(`
             <div class="sticky text-lg text-white">
@@ -1460,12 +1538,12 @@
                                 <hr>
 
                             </div>`);
-            related_songs.forEach((song, i) => {
+            upnextarr.forEach((song, i) => {
                 $("#upnext-container").append(`
                 
                         <button class="flex space-x-5 p-1"  onclick="chooseUpNext(${i})">
-                            <div class="border w-[55px] h-[55px]">
-                                <img src="${song.thumbnail}" alt="">
+                            <div class="border ">
+                                <img class="w-[55px] h-[55px]" src="${song.thumbnail}" alt="">
                             </div>
                             <div class="text-white">
                                 <div class="font-bold raleway text-container title-text text-start">
@@ -1507,14 +1585,13 @@
                     $('html, body').css(
                         'background-color', 'transparent'
                     );
-                    $('body').addClass("bg-gradient-to-r from-[#0f0f0f] from-5% via-[#1a1a1a] via-20% via-[#3e6b8f] via-50% to-[#002b5c] to-90%"
-);
+                    $('body').addClass("bg-gradient-to-r from-[#0f0f0f] from-5% via-[#1a1a1a] via-20% via-[#3e6b8f] via-50% to-[#002b5c] to-90%");
                     $("#allelements1").remove();
                     $("#lchild").remove("bg-transparent");
                     $("#lchild").addClass("gradnav");
                     $("#allelements").empty();
                     $("#allelements").append(
-                        `<div class="text-white flex space-x-2  w-[98%] text-[30px] mt-12">
+                        `<div class="text-white flex space-x-2  w-[98%] text-[30px] mt-20  mb-2">
                                 <div class="text-white montserrat">
                                     Results for 
                                 </div>
@@ -1526,7 +1603,7 @@
                             
                             `
                     );
-    
+
                     $("#allelements").append(
                         `
                                 <div id="griddiv" class="w-full  grid grid-cols-6 gap-y-2 ">
@@ -1534,7 +1611,7 @@
                                 `
                     )
                     response.mooddata.forEach(item => {
-    
+
                         $("#griddiv").append(
                             `
                         
@@ -1555,13 +1632,13 @@
                         `
                         );
                         var $lastAddedText = $("#griddiv .animated-text").last();
-    
-    
+
+
                         var trimmedText = $lastAddedText.text().trim();
-    
-    
+
+
                         if (trimmedText.length <= 20) {
-    
+
                             $lastAddedText.removeClass("animated-text");
                             $lastAddedText.closest(".text-container").removeClass("text-container");
                         }
