--- a/Goofy/mainapp/templates/mainapp/home.html
+++ b/Goofy/mainapp/templates/mainapp/home.html
@@ -186,9 +186,8 @@
             type: 'GET',
             url: "{% url 'getHomedata' %}",
             success: function (response) {
-                $('#ribbonbox').empty();
+                $("#ribbonbox").empty();
                 response.ribbon.forEach(item=>{
-                    console.log(item);
                     $('#ribbonbox').append(`
                     <button class=" mr-2 text-white text-lg bg-[#1e1e1e]  hover:bg-[#1d88e6] rounded-full hover:border-white border-2 border-[#1d88e6] hover:shadow-lg hover:shadow-white hover:scale-110"  onclick = "getMood('${item.params}','${item.title}')">
                         <div class="px-5 py-1 text-xl">${item.title}</div>
