--- a/Goofy/mainapp/templates/mainapp/base.html
+++ b/Goofy/mainapp/templates/mainapp/base.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="csrf-token" content="{{ csrf_token }}">
     <title>Home</title>
+    <link rel="icon" type="image/svg+xml" href="static/mainapp/homepageassets/logo60.svg">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Faster+One&family=Inter:wght@100..900&display=swap"
