--- a/Goofy/users/templates/users/login.html
+++ b/Goofy/users/templates/users/login.html
@@ -12,6 +12,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Faster+One&family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <title>Goofy - Login</title>
+  <link rel="icon" type="image/svg+xml" href="{%static 'users/logo60.svg' %}">
+
   <style>
     .popup {
       display: none;
@@ -44,12 +46,13 @@
     <form method="post" action="{% url 'password_reset' %}">
       {% csrf_token %}
       <input type="email" name="email" placeholder="Enter your email" required class="h-[45px] bg-white bg-opacity-30 rounded-[25px] shadow border border-black placeholder:text-black interlight px-2 placeholder:opacity-50">
-      <button type="submit" class="mt-4 w-full h-10 bg-[#FAFF00] hover:bg-[#a7a843] active:bg-[#c3c55a] rounded-lg">Submit</button>
+      <button type="submit" class="mt-4 w-full h-10 bg-[#1d88e6] hover:bg-[#a7a843] active:bg-[#c3c55a] rounded-lg">Submit</button>
     </form>
     <button onclick="closePopup()" class="mt-4 w-full h-10 bg-gray-500 text-white rounded-lg">Close</button>
   </div>
 
-  <div class="w-full flex flex-col items-center h-screen">
+  <div class="bg-[#1e1e1e] w-full flex flex-col items-center h-screen pt-10">
+    <div class="bg-black h-[90%] w-[30%] bg-blur flex-col flex items-center justify-center rounded-3xl">
     <div class="mt-[2%] faster-one text-[#1d88e6]">GOOFY</div>
     <form method="post" class="mt-[3%] items-center flex flex-col w-[50%] min-w-[250px]">
       {% csrf_token %}
@@ -92,10 +95,10 @@
         {% csrf_token %}
       <button type="submit"><img class="w-[33px] h-[33px]" src="{% static 'users/glogo.svg' %}" alt=""></button>
       </form>
-      <form action="" method="post">
+      <!-- <form action="" method="post">
         {% csrf_token %}
       <button type="submit"><img class="w-[33px] h-[33px]" src="{% static 'users/flogo.svg' %}" alt=""></button>
-      </form>
+      </form> -->
   
     </div>
     <div class="flex space-x-1">
@@ -103,7 +106,7 @@
       <a class="text-[#1d88e6] hover:underline" href="{% url 'register' %}">SignUp here</a>
     </div>
   </div>
-
+</div>
   <script>
     function openPopup() {
       document.getElementById("forgotPasswordPopup").style.display = "block";
