--- a/Goofy/users/templates/users/password_reset.html
+++ b/Goofy/users/templates/users/password_reset.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Reset</title>
+    <link rel="icon" type="image/svg+xml" href="{%static 'users/logo60.svg' %}">
     <link rel="stylesheet" href="{% static 'users/style.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
