--- a/Goofy/mainapp/templates/mainapp/base.html
+++ b/Goofy/mainapp/templates/mainapp/base.html
@@ -654,7 +654,7 @@
 
 
         document.addEventListener("keydown", function (event) {
-            
+
             if (event.key == " " && document.activeElement != document.getElementById("searchcontent") && document.activeElement != document.getElementById("name") && document.activeElement != document.getElementById("lib-description")) {
                 event.preventDefault();
                 playpause();
@@ -1667,6 +1667,11 @@
                 },
                 success: function (response) {
                     $("#main-content").html(response);
+                    if (expanded) {
+                        $("#allelements").addClass("md:ml-[280px]");
+                        $("#allelements1").addClass("md:ml-[280px]");
+
+                    }
 
                 }
             });
@@ -1681,6 +1686,11 @@
                 },
                 success: function (response) {
                     $("#main-content").html(response);
+                    if (expanded) {
+                        $("#allelements").addClass("md:ml-[280px]");
+
+
+                    }
 
                 }
             });
@@ -1696,7 +1706,11 @@
                 success: function (response) {
                     $("#main-content").html(response);
 
+                    if (expanded) {
+                        $("#allelements").addClass("md:ml-[280px]");
 
+
+                    }
                 }
             });
         }
@@ -1710,6 +1724,11 @@
                 },
                 success: function (response) {
                     $("#main-content").html(response);
+                    if (expanded) {
+                        $("#allelements").addClass("md:ml-[280px]");
+
+
+                    }
 
                 }
             });
@@ -1724,6 +1743,12 @@
                 },
                 success: function (response) {
                     $("#main-content").html(response);
+                    if (expanded) {
+                        $("#allelements").addClass("md:ml-[280px]");
+
+
+
+                    }
 
                 }
             });
